# WinDE

./: CMakeLists.txt  README.md  install.sh  winde-session.desktop
src/winde/compositor/: CMakeLists.txt
src/winde/panel/: CMakeLists.txt  clock.cpp  clock.h  panel.cpp  panel.h  taskbar.cpp  taskbar.h  taskbutton.cpp  taskbutton.h
src/winde/session/: CMakeLists.txt  winde-session
src/winde/settings/: CMakeLists.txt
src/winde/shell/: CMakeLists.txt  main.cpp  shellwindow.cpp  shellwindow.h  windeshell.cpp  windeshell.h
src/winde/window-manager/: CMakeLists.txt
